Bug 83828 - pam_systemd fails if home takes long to mount
Summary: pam_systemd fails if home takes long to mount
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-13 22:46 UTC by Giovanni Campagna
Modified: 2019-11-13 10:30 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Giovanni Campagna 2014-09-13 22:46:46 UTC
If $HOME (or any parent directory) takes too long to mount, for example because it is an autofs being fscked, pam_systemd will timeout and proceed to open the session without XDG_SESSION_ID (which will crash gnome-shell)
Comment 1 Lennart Poettering 2019-11-13 10:30:43 UTC
We nowadays set a very long timeout for the CreateSession() bus call (which is what pam_systemd ultimately calls), which should fix the issue. if you can reproduce on current git, please file a new bug on github.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.