pam_systemd: prolong method call timeout when allocating session

Starting a session might involve starting the user@.service instance,
hence let's make the bus call timeout substantially longer.

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=83828
(cherry picked from commit fbcb630045f9d13d6d4b16ba376b0cf27bf1e2d5)